--- a/css/index.css
+++ b/css/index.css
@@ -6,10 +6,19 @@
     margin-top: 5%;
 }
 
+.nav-bar .navigation .nav-link{
+    color: inherit;
+    text-decoration: none;
+}    
+
 .navigation{
-    
+    color: black;
 }
 
 .navigation li{
     display: inline-block;
+    padding: 15px 20px 15px 20px;
+    border: solid 3px;
+    border-radius: 20px;
+    text-decoration: none;
 }
