--- a/css/pizza.css
+++ b/css/pizza.css
@@ -1,19 +1,30 @@
+
 .main-img{
     display: block;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
+    
 }
 
-.tag-link{
-    background-color: rgb(150, 150, 150);
+.intro-container{
+    text-align: center;
+}
+
+.main-heading{
+    font-family: "DM Serif Display", sans-serif;
+    font-weight: 500;
+}
+
+.pizza-tag{
+    background-color: rgba(80, 80, 80, 0.6);
     color: hsl(0, 100%, 35%);
     display: inline-block;
     padding: 5px 10px 5px 10px;
     margin-bottom: 10px;
     text-decoration: none;
     border: solid 3px;
+    border-radius: 10%;
+    font-family: "Josefin Sans";
 }
-.tag-container{
-    text-align: center;
-}
+
