--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,23 @@
+.nav-bar{
+    /*border: solid; /* temp just to see where */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
 .logo{
-    width: 20%;
+    width: 50%;
     height: auto;
-    position: relative;
-    margin-left: 2%;
-    margin-top: 5%;
+    display: block;
+    margin: 0;
+    padding: 0;
+    
+}
+.logo-container{
+    display: block;
+    margin: 0;
+    padding: 0;
+    width: 50%;
 }
 
 .nav-bar .navigation .nav-link{
@@ -18,7 +32,6 @@
 .navigation li{
     display: inline-block;
     padding: 15px 20px 15px 20px;
-    border: solid 3px;
-    border-radius: 20px;
     text-decoration: none;
+    font-family: "Josefin Sans";
 }
