--- a/css/index.css
+++ b/css/index.css
@@ -1,23 +1,24 @@
 .nav-bar{
-    /*border: solid; /* temp just to see where */
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+    text-align: center;
+    border: solid white;
+    box-shadow: 0px 5px 10px grey;
 }
 
 .logo{
-    width: 50%;
+    width: 100%;
     height: auto;
     display: block;
     margin: 0;
     padding: 0;
-    
+
 }
 .logo-container{
-    display: block;
+    display: inline-block;
     margin: 0;
     padding: 0;
-    width: 50%;
+    width: 400px;
+    height: 150px;
+    
 }
 
 .nav-bar .navigation .nav-link{
@@ -27,6 +28,7 @@
 
 .navigation{
     color: black;
+    
 }
 
 .navigation li{
