--- a/css/pizza.css
+++ b/css/pizza.css
@@ -1,4 +1,48 @@
 
+
+.nav-bar{
+    text-align: center;
+    border: solid white;
+    box-shadow: 0px 5px 10px grey;
+}
+
+.logo{
+    width: 100%;
+    height: auto;
+    display: block;
+    margin: 0;
+    padding: 0;
+
+}
+.logo-container{
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    width: 400px;
+    height: 150px;
+    
+}
+
+.nav-bar .navigation .nav-link{
+    color: inherit;
+    text-decoration: none;
+}    
+
+.navigation{
+    color: black;
+    
+}
+
+.navigation li{
+    display: inline-block;
+    padding: 15px 20px 15px 20px;
+    text-decoration: none;
+    font-family: "Josefin Sans";
+}
+
+
+/* Pizza Part */
+
 .main-img{
     display: block;
     width: 100%;
@@ -24,7 +68,7 @@
     margin-bottom: 10px;
     text-decoration: none;
     border: solid 3px;
-    border-radius: 25%;
+    border-radius: 10px;
     font-family: "Josefin Sans";
 }
 
