--- a/css/index.css
+++ b/css/index.css
@@ -36,4 +36,12 @@
     padding: 15px 20px 15px 20px;
     text-decoration: none;
     font-family: "Josefin Sans";
+    box-shadow: inset 0 0 0 0 hsl(0, 100%, 35%);
+    color: #000000;
+    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
 }
+
+.navigation li:hover {
+    box-shadow: inset 150px 0 0 0 hsl(0, 100%, 35%);
+    color: white;
+  }
