--- a/css/pizza.css
+++ b/css/pizza.css
@@ -38,14 +38,22 @@
     padding: 15px 20px 15px 20px;
     text-decoration: none;
     font-family: "Josefin Sans";
+    box-shadow: inset 0 0 0 0 hsl(0, 100%, 35%);
+    color: #000000;
+    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
 }
+
+.navigation li:hover {
+    box-shadow: inset 150px 0 0 0 hsl(0, 100%, 35%);
+    color: white;
+  }
 
 
 /* Pizza Part */
 
 .main-img{
     display: block;
-    width: 100%;
+    width: 87%;
     margin-left: auto;
     margin-right: auto;
     
