--- a/css/index.css
+++ b/css/index.css
@@ -21,20 +21,12 @@
 }
 
 .logo{
-    width: 100%;
+    width: 400px;
     height: auto;
-    display: block;
-    margin: 0;
-    padding: 0;
-
-}
-.logo-container{
     display: inline-block;
     margin: 0;
     padding: 0;
-    width: 400px;
-    height: 150px;
-    
+
 }
 
 .nav-bar .navigation .nav-link{
@@ -43,8 +35,9 @@
 }    
 
 .navigation{
-    color: black;
-    
+    color: black; 
+    margin-top: 5px;
+    padding-left: 0px;
 }
 
 .navigation li{
@@ -55,9 +48,11 @@
     box-shadow: inset 0 0 0 0 hsl(0, 100%, 35%);
     color: #000000;
     transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+    
 }
 
 .navigation li:hover {
     box-shadow: inset 150px 0 0 0 hsl(0, 100%, 35%);
     color: white;
   }
+
