--- a/css/pasta.css
+++ b/css/pasta.css
@@ -1,7 +1,10 @@
 /* border-box makes the height and width include the padding and border. However, 
    the default normally is content-box, meaning that the heoght and width will only 
    be the content part of any box */
-
+/*{
+    border: solid red;
+}
+*/
    html {
     box-sizing: border-box;
 }
@@ -11,3 +14,54 @@
 }
 
 /* Upper Section*/
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    border: solid white;
+    box-shadow: 0px 5px 10px grey;
+}
+
+a{
+  text-decoration: none;
+  color: black;
+}
+
+.navbar ul {
+  list-style-type: none;
+  display: flex;
+  padding: 0px;
+  margin: 0px;
+}
+
+.navbar ul li{
+    padding-top:auto;
+    padding-bottom: auto;
+}
+
+
+.navigation li{
+    padding: 15px;
+    text-decoration: none;
+    font-family: "Josefin Sans";
+    box-shadow: inset 0 0 0 0 hsl(354, 99%, 40%);
+    color: #000000;
+    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+    align-self: center;
+}
+
+.navigation li:hover {
+    box-shadow: inset 150px 0 0 0 hsl(354, 99%, 50%);
+    color: white;
+  }
+
+
+.social-links{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.social-links a{
+    margin-right: 10px;
+}
+
+
