--- a/css/pizza.css
+++ b/css/pizza.css
@@ -95,3 +95,35 @@ body{
     font-family: "Josefin Sans";
 }
 
+h3{
+    font-size: 2em;
+    color: rgb(56, 56, 56);
+    width: 87%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 20px;
+}
+
+.container{
+    display: flex;
+    width: 87%;
+    margin-left: auto;
+    margin-right: auto;
+    flex-direction: row-reverse;
+}
+
+.ingredients{
+    flex: 0 0 30%;
+    text-align: center;
+    margin-left: 5px;
+    margin-top: 5px;
+    background-color: hsl(8, 82%, 40%);
+    color: white;
+    box-shadow: -5px 5px 20px 1px #000000;
+    
+}
+
+ul{
+    list-style: none;
+    padding: 0px;
+}
