--- a/css/lasagne.css
+++ b/css/lasagne.css
@@ -10,4 +10,81 @@
     box-sizing: inherit;
 }
 
+body{
+    font-family: "Source Serif Pro"
+}
 /* Upper Section*/
+
+.nav-bar{
+    text-align: center;
+    border: solid white;
+    box-shadow: 0px 5px 10px grey;
+}
+
+.logo{
+    width: 400px;
+    height: auto;
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+
+}
+
+.nav-bar .navigation .nav-link{
+    color: inherit;
+    text-decoration: none;
+}    
+
+.navigation{
+    color: black; 
+    margin-top: 5px;
+    padding-left: 0px;
+}
+
+.navigation li{
+    display: inline-block;
+    padding: 15px 20px 15px 20px;
+    text-decoration: none;
+    font-family: "Josefin Sans";
+    box-shadow: inset 0 0 0 0 hsl(104, 25%, 29%);
+    color: #000000;
+    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+    
+}
+
+.navigation li:hover {
+    box-shadow: inset 150px 0 0 0 hsl(104, 25%, 29%);
+    color: white;
+}
+
+/* Pizza Part */
+
+.intro-container{
+    text-align: center;
+}
+
+.main-heading{
+    font-family: "Source Serif Pro", sans-serif;
+    font-weight: bold;
+}
+
+.pasta-tag{
+    background-color: hsl(0, 0%, 100%);
+    color: hsl(104, 25%, 29%);
+    display: inline-block;
+    padding: 5px 10px 5px 10px;
+    margin-bottom: 10px;
+    text-decoration: none;
+    border: solid 3px;
+    border-radius: 10px;
+    font-family: "Josefin Sans";
+}
+
+.main-img{
+    display: block;
+    width: 87%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
