--- a/css/pizza.css
+++ b/css/pizza.css
@@ -137,3 +137,8 @@ footer{
     color: white;
     font-family: 'Roboto', sans-serif;
 }
+
+ol > li::marker {
+    font-weight: bold;
+    font-size: large;
+}
