--- a/css/lasagne.css
+++ b/css/lasagne.css
@@ -104,10 +104,11 @@ h3{
     margin-left: auto;
     margin-right: auto;
     flex-direction: row-reverse;
+    flex-wrap: wrap;
 }
 
 .ingredients{
-    flex: 0 0 30%;
+    flex: 1 0 30%;
     text-align: center;
     margin-left: 20px;
     margin-top: 5px;
@@ -115,6 +116,10 @@ h3{
     color: white;
     box-shadow: -5px 5px 20px 1px #000000;
     
+}
+
+.steps{
+    flex: 1 0 68%;
 }
 
 ul{
