--- a/css/pizza.css
+++ b/css/pizza.css
@@ -106,6 +106,7 @@ h3{
 }
 
 .container{
+    flex-wrap: wrap;
     display: flex;
     width: 87%;
     margin-left: auto;
@@ -114,7 +115,7 @@ h3{
 }
 
 .ingredients{
-    flex: 0 0 30%;
+    flex: 1 0 30%;
     text-align: center;
     margin-left: 20px;
     margin-top: 5px;
@@ -122,6 +123,10 @@ h3{
     color: white;
     box-shadow: -5px 5px 20px 1px #000000;
     
+}
+
+.steps{
+    flex: 1 0 68%;
 }
 
 ul{
