--- a/css/pasta.css
+++ b/css/pasta.css
@@ -15,4 +15,44 @@
 
 /* Upper Section*/
 
+.nav-bar{
+    text-align: center;
+    border: solid white;
+    box-shadow: 0px 5px 10px grey;
+}
 
+.logo{
+    width: 400px;
+    height: auto;
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+
+}
+
+.nav-bar .navigation .nav-link{
+    color: inherit;
+    text-decoration: none;
+}  
+
+.navigation{
+    color: black; 
+    margin-top: 5px;
+    padding-left: 0px;
+}
+
+.navigation li{
+    display: inline-block;
+    padding: 15px 20px 15px 20px;
+    text-decoration: none;
+    font-family: "Josefin Sans";
+    box-shadow: inset 0 0 0 0 hsl(1, 87%, 73%);
+    color: #000000;
+    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+    
+}
+
+.navigation li:hover {
+    box-shadow: inset 150px 0 0 0 hsl(1, 87%, 73%);
+    color: white;
+  }
