--- a/css/lasagne.css
+++ b/css/lasagne.css
@@ -53,7 +53,7 @@ body{
 }
 
 .navigation li:hover {
-    box-shadow: inset 150px 0 0 0 hsl(104, 25%, 29%);
+    box-shadow: inset 150px 0 150px 0 hsl(104, 25%, 29%);
     color: white;
 }
 
