--- a/css/pasta.css
+++ b/css/pasta.css
@@ -5,12 +5,16 @@
     border: solid red;
 }
 */
-   html {
+html {
     box-sizing: border-box;
 }
 
 *, *:before, *:after {
     box-sizing: inherit;
+}
+
+body{
+    font-family: "Source Serif Pro"
 }
 
 /* Upper Section*/
@@ -59,15 +63,6 @@
 
   /* Pasta Part */
 
-.main-img{
-    display: block;
-    width: 87%;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
-    
-}
-
 .intro-container{
     text-align: center;
 }
@@ -88,4 +83,21 @@
     border: solid 3px;
     border-radius: 10px;
     font-family: "Josefin Sans";
+}
+
+.main-img{
+    display: block;
+    width: 87%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+h3{
+    font-size: 2em;
+    color: rgb(56, 56, 56);
+    width: 87%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 20px;
 }
