--- a/css/pizza.css
+++ b/css/pizza.css
@@ -59,7 +59,7 @@ body{
 }
 
 .navigation li:hover {
-    box-shadow: inset 150px 0 0 0 hsl(0, 100%, 35%);
+    box-shadow: inset 150px 0 150px 0 hsl(0, 100%, 35%);
     color: white;
   }
 
