--- a/css/pasta.css
+++ b/css/pasta.css
@@ -131,6 +131,15 @@ ul{
     padding: 0px;
 }
 
+ol > li::marker{
+    font-weight: bold;
+    font-size: large;
+}
+
+.steps ol li{
+    margin-bottom: 1rem ;
+}
+
 footer{
     text-align: center;
     margin-top: 30px;
@@ -139,3 +148,4 @@ footer{
     color: white;
     font-family: 'Roboto', sans-serif;
 }
+
